# hri_msgs-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
msg/: Gesture.msg  LiveSpeech.msg
rpm/: ros-humble-hri-msgs.spec  ros-rolling-hri-msgs.spec  template.spec
