<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_msgs</name>
  <version>2.3.2</version>
  <description>Messages, services and action definitions useful for Human-Robot Interaction</description>
  <maintainer email="severin.lemaignan@iiia.csic.es">Séverin Lemaignan</maintainer>
  <license>Apache License 2.0</license>
  <author email="severin.lemaignan@iiia.csic.es">Séverin Lemaignan</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
